<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/quizListLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtQuizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[quiz name]"
            android:textSize="28sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_text"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/txtGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_text"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Number of Questions"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/txtNumberOfQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_weight="1"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>