<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20sp"
    app:cardElevation="8dp"
    android:padding="25dp"
    android:layout_margin="10dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageEBook"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/white"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:layout_margin="15dp"
            android:id="@+id/eBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textAlignment="center"
            android:textIsSelectable="true"
            style="@style/MainButtonsStyle"
            android:padding="15dp"


            />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/eBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textIsSelectable="true"
            android:padding="15dp"
            style="@style/MainButtonsStyle"

            />

        <TextView
            android:id="@+id/eBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:padding="15dp"
            android:lineSpacingMultiplier="1.5"
            android:layout_margin="10dp"
            style="@style/MainButtonsStyle"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <Button
                android:id="@+id/btnRead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/read"
                android:layout_margin="15dp"
                android:textSize="12sp"
                android:background="@color/white"
                android:textColor="@color/colorPrimaryDark"
                style="@style/MainButtonsStyle"
                />

            <CheckBox
                android:id="@+id/checkboxFavorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/favorites"
                android:textSize="12sp"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:textColor="@color/colorPrimaryDark"
                style="@style/TextStyles"
                />

            <CheckBox
                android:id="@+id/checkboxMarkAsRead"
                android:text="@string/mark_as_read"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="15dp"
                android:textSize="12sp"
                android:background="@color/white"
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"

                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>