<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SkillActivity"
    android:background="@color/colorPrimary"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSkillTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            style="@style/MainButtonsStyle"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            />

        <fragment
            android:layout_margin="10dp"
            android:id="@+id/introFragment"
            android:name="team.fourty.seven.learnit.views.fragments.VideoFragment"
            class="team.fourty.seven.learnit.views.fragments.VideoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <fragment
            android:id="@+id/descriptionFragment"
            android:name="team.fourty.seven.learnit.views.fragments.DescriptionFragment"
            class="team.fourty.seven.learnit.views.fragments.DescriptionFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_description"
            android:layout_margin="10dp"


            />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMoreVideos"
            android:gravity="center"
            style="@style/MainButtonsStyle"
            android:textSize="16sp"
            android:padding="15dp"
            />


        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="19"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/imageVideoSlideRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="18"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MainButtonsStyle">

                <ImageButton
                    android:id="@+id/btnExpandVideos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_media_play_light"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription"
                    />
            </LinearLayout>


        </LinearLayout>





        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMoreEbooks"
            android:gravity="center"
            style="@style/MainButtonsStyle"
            android:textSize="16sp"
            android:padding="15dp"
            />

        <LinearLayout
           android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="19"
         >


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/imageEBookSlideRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="18"
                    android:orientation="horizontal"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MainButtonsStyle">
            <ImageButton
                android:id="@+id/btnExpandEBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ic_media_play_light"
                android:layout_gravity="center"
                tools:ignore="ContentDescription"

                />
            </LinearLayout>
        </LinearLayout>


        <!--<fragment-->
            <!--android:id="@+id/ebooksSlide"-->
            <!--android:name="team.fourty.seven.learnit.views.fragments.EBooksSlideFragment"-->
            <!--class="team.fourty.seven.learnit.views.fragments.EBooksSlideFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--tools:layout="@layout/fragment_slides_ebooks" />-->

        <Button
            android:id="@+id/quizButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:padding="20dp"
            android:text="@string/quiz" />


    </LinearLayout>

</ScrollView>